# momiji

./: .clang-format  .clang-tidy  .editorconfig  .exrc  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  Todo.md  build.sh  compile_commands.json  conanfile.txt  format.sh  run-clang-tidy.sh  rungl.sh  runqt.sh
.github/workflows/: main.yaml
ci/linux-x64/: Dockerfile  build-all.sh  build-cli.sh  build-gl.sh  build-lib.sh  build-qt.sh  build.sh  package.sh
ci/osx/: build-all.sh  build-qt.sh  build.sh  package.sh
ci/win-x64/: build-all.sh  build-gl.sh  build-lib.sh  build-qt-msys2-bootstrap.sh  build-qt-msys2.sh  build-qt.sh  build.sh  package.sh  setup-qt.sh  unattended.qs
cmake/: linux-install.cmake  set-flags.cmake
cmake/toolchain/: linux-mingw64.cmake
data/: program.kra
docs/: Gemfile  _config.yml  index.md
docs/_includes/: classes.html  common-layout.html  common_head.html  enums.html  family.html  fields.html  flags.html  free-functions.html  header.html  interfaces.html  libraries.html  methods.html  overloads.html  top.html  typedefs.html
docs/_layouts/: class.html  default.html  enum.html  function.html  interface.html  library.html  method.html
docs/assets/: theme.scss
docs/userapi/: index.md
docs/userapi/Compiler/: CompilerSettings.md  f_compile.md  index.md
docs/userapi/Decoder/: DecodedInstruction.md  InstructionData.md  f_decode.md  index.md
docs/userapi/Emulator/: f_continueEmulatorExecution.md  index.md
docs/userapi/Emulator/c_Emulator/: index.md  m_constStates.md  m_ctr1.md  m_getSettings.md  m_getStates.md  m_loadNewSettings.md  m_newState.md  m_reset.md  m_rollback.md  m_states.md  m_step.md
docs/userapi/Emulator/c_EmulatorSettings/: RetainStates.md  index.md
docs/userapi/Memory/: index.md
docs/userapi/Parser/: ParsedInstruction.md  ParserError.md  ParsingInfo.md  e_ParserOperand.md  e_ParserSection.md  f_convertOperand.md  f_extractASTValue.md  f_extractRegister.md  f_mapOperand.md  f_parse.md  index.md
docs/userapi/Parser/Breakpoint/: index.md
docs/userapi/System/: StatusRegister.md  f_make_memory_view.md  index.md
docs/userapi/Types/: e_BranchConditions.md  e_DataType.md  e_InstructionType.md  e_OperandType.md  e_SpecialAddressingMode.md
include/: CPU.h  Compiler.h  Decoder.h  Emulator.h  Gui.h  Memory.h  Parser.h  ParserCombinators.h  Renderer.h  System.h  Types.h  Utils.h
libmomiji/: CMakeLists.txt
libmomiji/configure/include/momiji/: config.h.in
libmomiji/include/: Compiler.h  Emulator.h  Memory.h
libmomiji/include/momiji/: Compiler.h  Decoder.h  Emulator.h  Memory.h  Parser.h  Renderer.h  System.h  Types.h  Utils.h
libmomiji/include/momiji/Parser/: AST.h  Common.h  Errors.h  Instruction.h  Operands.h  details.h
libmomiji/src/: Emulator.cpp
libmomiji/src/Compiler/: Compiler.cpp  Utils.cpp  Utils.h  add.cpp  add.h  and.cpp  and.h  bcc.cpp  bcc.h  bra.cpp  bra.h  cmp.cpp  cmp.h  div.cpp  div.h  exg.cpp  exg.h  internal.cpp  internal.h  jmp.cpp  jmp.h  move.cpp  move.h  mul.cpp  mul.h  not.cpp  not.h  or.cpp  or.h  roxd.h  rts.cpp  rts.h  shifts.h  sub.cpp  sub.h  swap.cpp  swap.h  tst.cpp  tst.h  xor.cpp  (+1 more)
libmomiji/src/Decoder/: Decoder.cpp  Utils.h  add.cpp  add.h  and.cpp  and.h  bcc.cpp  bcc.h  bra.cpp  bra.h  cmp.cpp  cmp.h  div.cpp  div.h  exg.cpp  exg.h  internal.cpp  internal.h  jmp.cpp  jmp.h  move.cpp  move.h  mul.cpp  mul.h  not.cpp  not.h  or.cpp  or.h  rod.cpp  rod.h  roxd.cpp  roxd.h  rts.cpp  rts.h  shifts.h  sub.cpp  sub.h  swap.cpp  swap.h  tst.cpp  (+1 more)
libmomiji/src/Instructions/: Representations.h  Utils.h  add.cpp  add.h  and.cpp  and.h  bcc.cpp  bcc.h  bra.cpp  bra.h  cmp.cpp  cmp.h  div.cpp  exg.cpp  exg.h  illegal.h  internal.cpp  internal.h  jmp.cpp  jmp.h  move.cpp  move.h  mul.cpp  mul.h  noop.cpp  noop.h  not.cpp  or.cpp  or.h  rod.cpp  rod.h  roxd.cpp  rts.cpp  rts.h  shifts.cpp  shifts.h  sub.cpp  sub.h  swap.cpp  swap.h  (+1 more)
libmomiji/src/Parser/: .fuse_hidden0000032700000002  Combinators.h  Common.h  Directives.cpp  Directives.h  Instructions.cpp  Instructions.h  Mappings.h  Parser.cpp  Parser2.cpp
libmomiji/tests/: CMakeLists.txt
libmomiji/tests/src/: parser-instr.cpp  parser.cpp  testing.h
momiji-gl/: CMakeLists.txt
momiji-gl/deploy/: momiji-gl.desktop
momiji-gl/src/: Gui.cpp  Renderer.cpp  Renderer.h  main.cpp
momiji-qt/: CMakeLists.txt
momiji-qt/cmake/: DeployQt.cmake
momiji-qt/deploy/: momiji-qt.desktop
momiji-qt/res/: resources.qrc
momiji-qt/res/help/: index_en_US.html  index_it_IT.html  move_en_US.html  move_it_IT.html  naming_en_US.html  style.css
momiji-qt/res/icons/: icon_compile.ico.kra  icon_execute.ico.kra  icon_reset.ico.kra  icon_rollback.ico.kra  icon_step.ico.kra
momiji-qt/res/translations/: momijiqt_it.ts
momiji-qt/src/: MemoryModel.cpp  MemoryModel.h  aboutdialog.cpp  aboutdialog.ui  helpwindow.cpp  helpwindow.h  helpwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  momiji-qt.pro
momiji-tools/: CMakeLists.txt
momiji-tools/deploy/: momiji-as.desktop  momiji-diff.desktop  momiji-dump.desktop
momiji-tools/src/: assembler.cpp  diff.cpp  dump.cpp  utils.h
src/: Emulator.cpp  Gui.cpp  Instructions.h  Parser.cpp  RecParser.cpp  Renderer.cpp  Renderer.h  main.cpp
src/Compiler/: Compiler.cpp  Utils.h  add.h  and.h  bcc.h  bra.h  cmp.h  div.h  exg.h  internal.h  jmp.h  move.h  mul.h  or.h  sub.h  swap.h  tst.h  xor.h
src/Decoder/: Decoder.cpp  Utils.h  add.cpp  add.h  and.cpp  and.h  bcc.cpp  bcc.h  bra.cpp  bra.h  cmp.cpp  cmp.h  div.cpp  div.h  exg.cpp  exg.h  internal.cpp  internal.h  jmp.cpp  jmp.h  move.cpp  move.h  mul.cpp  mul.h  or.cpp  or.h  sub.cpp  sub.h  tst.cpp  tst.h
src/Instructions/: OpCodes.h  Representations.h  Utils.h  add.cpp  add.h  and.cpp  and.h  bcc.cpp  bcc.h  bra.cpp  bra.h  cmp.cpp  cmp.h  div.cpp  div.h  exg.cpp  exg.h  illegal.h  internal.cpp  internal.h  jmp.cpp  jmp.h  move.cpp  move.h  mul.cpp  mul.h  noop.h  or.cpp  or.h  sub.cpp  sub.h  tst.cpp  tst.h
src/Parser/: Combinators.h  Common.h  Instructions.cpp  Instructions.h  Mappings.h  Parser.cpp
(+44 files in other folders)
